rewrote the code so that: - all versions of Ubuntu get remote-content-search disabled - old versions of Ubuntu uninstall unity-lens-shopping - new versions of Ubuntu disable specific online lenses

--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
   </head>
   <body>
     <div id="wrapper">
-      <p>Copy code. Open a terminal (Ctrl-Alt-T). Paste code, press enter. Type password. Enjoy your privacy.</p>
       <h1>fix ubuntu</h1>
-      <code id="cmd"> sudo apt-get remove -y unity-lens-shopping; sudo sh -c 'echo "127.0.0.1 productsearch.ubuntu.com" &gt;&gt; /etc/hosts'; if [ `cat /etc/lsb-release | grep DISTRIB_RELEASE | cut -d"=" -f2` \< '13.10' ]; then gsettings set com.canonical.Unity.Lenses remote-content-search none; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi</code>
+      <code id="cmd">gsettings set com.canonical.Unity.Lenses remote-content-search none; if [ `cat /etc/lsb-release | grep DISTRIB_RELEASE | cut -d"=" -f2` \< '13.10' ]; then sudo apt-get remove -y unity-lens-shopping; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; sudo sh -c 'echo "127.0.0.1 productsearch.ubuntu.com" &gt;&gt; /etc/hosts';</code>
+      <p>Copy code. Open a terminal (Ctrl-Alt-T). Paste code, press enter. Type password. Enjoy your privacy.</p>
       <table id="details">
         <tr>
           <td colspan="2" id="header">What does this do?</td>
         </tr>
         <tr>
+          <td><code>gsettings set com.canonical.Unity.Lenses remote-content-search none</code></td>
+          <td>Turns off &quot;Remote Search&quot;, so search terms in Dash don't get sent to the internet</td>
+        </tr>
+        <tr>
+          <td><code>gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"</code></td>
+          <td>Turns off other remote Dash scopes, just in case (for Ubuntu 13.10 and newer)</td>
+        </tr>
+        <tr>
           <td><code>sudo apt-get remove -y unity-lens-shopping</code></td>
-          <td>Uninstalls Amazon ads built-in to Ubuntu</td>
+          <td>Uninstalls Amazon ads built-in to Ubuntu (for Ubuntu 13.04 and older)</td>
         </tr>
         <tr>
           <td><code>sudo sh -c 'echo "127.0.0.1 productsearch.ubuntu.com" &gt;&gt; /etc/hosts'</code></td>
           <td>Blocks connections to Ubuntu's ad server, just in case</td>
-        </tr>
-        <tr>
-          <td><code>if [ `cat /etc/lsb-release | grep DISTRIB_RELEASE | cut -d"=" -f2` \< '13.10' ]; then gsettings set com.canonical.Unity.Lenses remote-content-search none; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi</code></td>
-          <td>Detects Ubuntu version and turns off &quot;Remote Search&quot;, so search terms in Dash don't get sent to the internet</td>
         </tr>
       </table>
 
