--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="spacer"></div>
 
-        <p class="disclaimer"><strong>Disclaimer:</strong> In case you are either 1) a complete idiot; or 2) a lawyer; or 3) both, please be aware that this site is not affiliated with or approved by Canonical Limited. This site <em>critizes</em> Canonical for certain privacy-invading features of Ubuntu and teaches users how to fix them. So, obviously, the site not approved by Canonical. And our use of the trademarked term Ubuntu is plainly descriptive&mdash;it helps the public find and understand this site and its message.</p>
+        <p class="disclaimer"><strong>Disclaimer:</strong> In case you are either 1) a complete idiot; or 2) a lawyer; or 3) both, please be aware that this site is not affiliated with or approved by Canonical Limited. This site <em>criticizes</em> Canonical for certain privacy-invading features of Ubuntu and teaches users how to fix them. So, obviously, the site not approved by Canonical. And our use of the trademarked term Ubuntu is plainly descriptive&mdash;it helps the public find and understand this site and its message.</p>
 
       </div>
 
