--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <meta property="og:title" content="Fix Ubuntu" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://fixubuntu.com/opg.png" />
+    <meta property="og:url" content="https://fixubuntu.com" />
+    <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you." />
   </head>
   <body>
     <div id="wrapper">
