A little bit of HTML5 standarzation:
- fixed the DOCTYPE to match the HTML5 doctype.
- added viewport meta tag to make the site more mobile-friendly
- changed line-height % to em
- updated charset meta format
- added description meta

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE HTML
-  PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Fix Ubuntu</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://fixubuntu.com/images/opg.png" />
     <meta property="og:url" content="https://fixubuntu.com" />
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you." />
+
   </head>
   <body>
     <div id="wrapper">
