--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <meta property="og:url" content="https://fixubuntu.com" />
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you." />
 
+    <!-- syntax highlighter -->
+    <script src="lib/syntaxhighlighter/shCore.js"></script>
+    <script src="lib/syntaxhighlighter/shBrushBash.js"></script>
+    <link rel="stylesheet" href="lib/syntaxhighlighter/shCore.css" />
+    <link rel="stylesheet" href="lib/syntaxhighlighter/shThemeRDark.css" />
+    <style>.syntaxhighlighter { padding:10px; }</style>
+
   </head>
   <body>
     <div id="wrapper">
@@ -20,30 +27,44 @@
 
       <div id="left">
 
-        <p class="center">Copy code. Open a terminal (Ctrl-Alt-T).<br>Paste code, press enter. Type password.<br>Enjoy your privacy.</p>
-        <code id="cmd">gsettings set com.canonical.Unity.Lenses remote-content-search none; if [ "`/usr/bin/lsb_release -rs`" \< '13.10' ]; then sudo apt-get remove -y unity-lens-shopping; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; echo | sudo tee -a /etc/hosts; echo 127.0.0.1 productsearch.ubuntu.com | sudo tee -a /etc/hosts;</code>
+        <p class="center">Copy code. Open a terminal (Ctrl-Alt-T). Paste code, press enter. Type password. Enjoy your privacy.</p>
+        <code id="cmd">bash; V=`/usr/bin/lsb_release -rs`; if [ $V \< 12.10 ]; then echo "Good news! Your version of Ubuntu doesn't invade your privacy."; else gsettings set com.canonical.Unity.Lenses remote-content-search none; if [ $V \< 13.10 ]; then sudo apt-get remove -y unity-lens-shopping; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; if ! grep -q productsearch.ubuntu.com /etc/hosts; then echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts >/dev/null; fi; echo "All done. Enjoy your privacy."; fi</code>
 
-        <table id="details">
-          <tr>
-            <td colspan="2"><h2>What does this do?</h2></td>
-          </tr>
-          <tr class="even">
-            <td><code>gsettings set com.canonical.Unity.Lenses remote-content-search none</code></td>
-            <td>Turns off &quot;Remote Search&quot;, so search terms in Dash don't get sent to the internet</td>
-          </tr>
-          <tr class="odd">
-            <td><code>gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"</code></td>
-            <td>Turns off other remote Dash scopes, just in case (for Ubuntu 13.10 and newer)</td>
-          </tr>
-          <tr class="even">
-            <td><code>sudo apt-get remove -y unity-lens-shopping</code></td>
-            <td>Uninstalls Amazon ads built-in to Ubuntu (for Ubuntu 13.04 and older)</td>
-          </tr>
-          <tr class="odd">
-            <td><code>echo | sudo tee -a /etc/hosts; echo 127.0.0.1 productsearch.ubuntu.com | sudo tee -a /etc/hosts</code></td>
-            <td>Blocks connections to Ubuntu's ad server, just in case</td>
-          </tr>
-        </table>
+        <h2>What does this do?</h2>
+        <pre class="brush: bash">
+#!/bin/bash
+
+# Figure out the version of Ubuntu that you're running
+V=`/usr/bin/lsb_release -rs`;
+
+# The privacy problems started with 12.10, so earlier versions should do nothing
+if [ $V \< 12.10 ]; then
+  echo "Good news! Your version of Ubuntu doesn't invade your privacy.";
+else
+  # Turn off "Remote Search", so search terms in Dash don't get sent to the internet
+  gsettings set com.canonical.Unity.Lenses remote-content-search none; 
+
+  # If you're using earlier than 13.10, uninstall unity-lens-shopping
+  if [ $V \< 13.10 ]; then
+    sudo apt-get remove -y unity-lens-shopping;
+
+  # If you're using a later version, disable remote scopes
+  else
+    gsettings set com.canonical.Unity.Lenses disabled-scopes 
+      "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 
+      'more_suggestions-populartracks.scope', 'music-musicstore.scope', 
+      'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 
+      'more_suggestions-skimlinks.scope']"; 
+  fi;
+
+  # Block connections to Ubuntu's ad server, just in case
+  if ! grep -q productsearch.ubuntu.com /etc/hosts; then 
+    echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts >/dev/null;
+  fi;
+
+  echo "All done. Enjoy your privacy.";
+fi
+        </pre>
 
       </div>
 
@@ -76,5 +97,11 @@
       <div class="clear"></div>
 
     </div>
+
+    <script>
+    SyntaxHighlighter.defaults['gutter'] = false;
+    SyntaxHighlighter.defaults['toolbar'] = false;
+    SyntaxHighlighter.all();
+    </script>
   </body>
 </html>
