Add line-continuation character to gsettings call

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ else
 
   # If you're using a later version, disable remote scopes
   else
-    gsettings set com.canonical.Unity.Lenses disabled-scopes 
+    gsettings set com.canonical.Unity.Lenses disabled-scopes \
       "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 
       'more_suggestions-populartracks.scope', 'music-musicstore.scope', 
       'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 
