--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Fix Ubuntu</title>
     <meta charset="utf-8">
+    <title>Fix Ubuntu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="lib/syntaxhighlighter/shCore.css">
+    <link rel="stylesheet" href="lib/syntaxhighlighter/shThemeRDark.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu" />
     <meta property="og:type" content="website" />
@@ -16,9 +18,6 @@
     <!-- syntax highlighter -->
     <script src="lib/syntaxhighlighter/shCore.js"></script>
     <script src="lib/syntaxhighlighter/shBrushBash.js"></script>
-    <link rel="stylesheet" href="lib/syntaxhighlighter/shCore.css" />
-    <link rel="stylesheet" href="lib/syntaxhighlighter/shThemeRDark.css" />
-    <style>.syntaxhighlighter { padding:10px; }</style>
 
   </head>
   <body>
