Include normalize.css for better cross browser support.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Fix Ubuntu</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/shCore.css">
     <link rel="stylesheet" href="css/shThemeRDark.css">
     <link rel="stylesheet" href="css/style.css">
@@ -107,7 +108,7 @@ fi
       <div class="clear"></div>
 
       <p class="disclaimer">
-        <strong>Disclaimer:</strong> In case you are either 1) a complete idiot; or 2) a lawyer; or 3) both, please be aware that this site is not affiliated with or approved by Canonical Limited. This site <em>criticizes</em> Canonical for certain privacy-invading features of Ubuntu and teaches users how to fix them. So, obviously, the site is not approved by Canonical. And our use of the trademarked term Ubuntu is plainly descriptive&mdash;it helps the public find this site and understand its message.
+        <strong>Disclaimer:</strong> In case you are either 1) a complete idiot; or 2) a lawyer; or 3) both, please be aware that this site is not affiliated with or approved by Canonical Limited. This site <em>criticizes</em> Canonical for certain privacy-invading features of Ubuntu and teaches users how to fix them. So, obviously, the site is not approved by Canonical. And our use of the trademarked term Ubuntu is plainly descriptive &mdash; it helps the public find this site and understand its message.
       </p>
 
     </div>
