--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Fix Ubuntu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/shCore.css">
-    <link rel="stylesheet" href="css/shThemeRDark.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pack-@@version.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu">
@@ -18,10 +15,6 @@
     <meta property="og:image:height" content="483">
     <meta property="og:url" content="https://fixubuntu.com">
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
-
-    <!-- syntax highlighter -->
-    <script src="js/shCore.js"></script>
-    <script src="js/shBrushBash.js"></script>
   </head>
   <body>
     <div id="wrapper">
@@ -156,6 +149,7 @@ fi
 
     </div>
 
+    <script src="js/pack-@@version.js"></script>
     <script>
       SyntaxHighlighter.defaults['gutter'] = false;
       SyntaxHighlighter.defaults['toolbar'] = false;
