--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
   </head>
   <body>
-    <div id="wrapper">
+    <div>
       <div id="header">
         <h1>fix ubuntu</h1>
       </div>
