--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>fix ubuntu</h1>
+      <div id="header">
+        <h1>fix ubuntu</h1>
+      </div>
 
       <div id="left">
 
