Move common property to a new selector.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ fi
           Ubuntu should protect user privacy by default. Since it doesn't, you can use
           the code to the left to disable the parts of Ubuntu which are invasive to your privacy.
         </p>
-        <p class="note">
+        <p class="small">
           Note: This privacy problem only affects Unity. If you use GNOME (sudo apt-get install gnome-shell) or any other desktop environment, or if you run an Ubuntu derivative like <a href="http://www.linuxmint.com/">Linux Mint</a>, <a href="http://xubuntu.org/">Xubuntu</a>, <a href="http://www.kubuntu.org/">Kubuntu</a>, etc., you won't have this problem.
         </p>
         <p>
@@ -145,7 +145,7 @@ fi
 
       <div class="clear"></div>
 
-      <p class="disclaimer">
+      <p class="disclaimer small">
         <strong>Disclaimer:</strong> In case you are either 1) a complete idiot; or 2) a lawyer; or 3) both,
         please be aware that this site is not affiliated with or approved by Canonical Limited.
         This site <em>criticizes</em> Canonical for certain privacy-invading features of Ubuntu
