--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/shCore.css">
     <link rel="stylesheet" href="css/shThemeRDark.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu">
     <meta property="og:type" content="website">
