--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
         <p class="center">
           Copy code. Open a terminal (Ctrl-Alt-T). Paste code, press enter. Type password. Enjoy your privacy.
         </p>
-        <code class="cmd">V=`/usr/bin/lsb_release -rs`; if [ $V \&lt; 12.10 ]; then echo "Good news! Your version of Ubuntu doesn't invade your privacy."; else gsettings set com.canonical.Unity.Lenses remote-content-search none; if [ $V \&lt; 13.10 ]; then sudo apt-get remove -y unity-lens-shopping; else gsettings set com.canonical.Unity.Lenses disabled-scopes "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; if ! grep -q productsearch.ubuntu.com /etc/hosts; then echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts >/dev/null; fi; echo "All done. Enjoy your privacy."; fi</code>
+        <code class="cmd">GS="/usr/bin/gsettings"; CCUL="com.canonical.Unity.lenses"; V=`/usr/bin/lsb_release -rs`; if [ $V \&lt; 12.10 ]; then echo "Good news! This version of Ubuntu is not known to invade your privacy."; else $GS set $CCUL remote-content-search none; if [ $V \&lt; 13.10 ]; then sudo apt-get remove -y unity-lens-shopping; else $GS set $CCUL disabled-scopes \ "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; if ! grep -q "127.0.0.1 productsearch.ubuntu.com" /etc/hosts; then echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts &gt;/dev/null; fi; echo "All done. Enjoy your privacy."; fi</code>
 
         <h2>What does this do?</h2>
         <pre class="brush: bash">
 #!/bin/bash
 
+GS="/usr/bin/gsettings"
+CCUL="com.canonical.Unity.lenses"
+
 # Figure out the version of Ubuntu that you're running
 V=`/usr/bin/lsb_release -rs`
-
 # The privacy problems started with 12.10, so earlier versions should do nothing
 if [ $V \&lt; 12.10 ]; then
-  echo "Good news! Your version of Ubuntu doesn't invade your privacy."
+  echo "Good news! This version of Ubuntu is not known to invade your privacy."
 else
   # Turn off "Remote Search", so search terms in Dash don't get sent to the internet
-  gsettings set com.canonical.Unity.Lenses remote-content-search none
+  $GS set $CCUL remote-content-search none
 
   # If you're using earlier than 13.10, uninstall unity-lens-shopping
   if [ $V \&lt; 13.10 ]; then
@@ -50,7 +52,7 @@ else
 
   # If you're using a later version, disable remote scopes
   else
-    gsettings set com.canonical.Unity.Lenses disabled-scopes \
+    $GS set $CCUL disabled-scopes \
       "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope',
       'more_suggestions-populartracks.scope', 'music-musicstore.scope',
       'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope',
@@ -58,8 +60,8 @@ else
   fi;
 
   # Block connections to Ubuntu's ad server, just in case
-  if ! grep -q productsearch.ubuntu.com /etc/hosts; then
-    echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts >/dev/null
+  if ! grep -q "127.0.0.1 productsearch.ubuntu.com" /etc/hosts; then
+    echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts &gt;/dev/null
   fi
 
   echo "All done. Enjoy your privacy."
