--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="center">
           Copy code. Open a terminal (Ctrl-Alt-T). Paste code, press enter. Type password. Enjoy your privacy.
         </p>
-        <code class="cmd">GS="/usr/bin/gsettings"; CCUL="com.canonical.Unity.lenses"; V=`/usr/bin/lsb_release -rs`; if [ $V \&lt; 12.10 ]; then echo "Good news! This version of Ubuntu is not known to invade your privacy."; else $GS set $CCUL remote-content-search none; if [ $V \&lt; 13.10 ]; then sudo apt-get remove -y unity-lens-shopping; else $GS set $CCUL disabled-scopes \ "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; if ! grep -q "127.0.0.1 productsearch.ubuntu.com" /etc/hosts; then echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts &gt;/dev/null; fi; echo "All done. Enjoy your privacy."; fi</code>
+        <code class="cmd">GS="/usr/bin/gsettings"; CCUL="com.canonical.Unity.lenses"; V=`/usr/bin/lsb_release -rs`; if awk "BEGIN {exit !($V &lt; 12.10)}"; then echo "Good news! This version of Ubuntu is not known to invade your privacy."; else $GS set $CCUL remote-content-search none; if [ $V \&lt; 13.10 ]; then sudo apt-get remove -y unity-lens-shopping; else $GS set $CCUL disabled-scopes \ "['more_suggestions-amazon.scope', 'more_suggestions-u1ms.scope', 'more_suggestions-populartracks.scope', 'music-musicstore.scope', 'more_suggestions-ebay.scope', 'more_suggestions-ubuntushop.scope', 'more_suggestions-skimlinks.scope']"; fi; if ! grep -q "127.0.0.1 productsearch.ubuntu.com" /etc/hosts; then echo -e "\n127.0.0.1 productsearch.ubuntu.com" | sudo tee -a /etc/hosts &gt;/dev/null; fi; echo "All done. Enjoy your privacy."; fi</code>
 
         <h2>What does this do?</h2>
         <pre class="brush: bash">
@@ -40,7 +40,7 @@ CCUL="com.canonical.Unity.lenses"
 # Figure out the version of Ubuntu that you're running
 V=`/usr/bin/lsb_release -rs`
 # The privacy problems started with 12.10, so earlier versions should do nothing
-if [ $V \&lt; 12.10 ]; then
+if awk "BEGIN {exit !($V &lt; 12.10)}"; then
   echo "Good news! This version of Ubuntu is not known to invade your privacy."
 else
   # Turn off "Remote Search", so search terms in Dash don't get sent to the internet
