--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Fix Ubuntu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/pack-@@version.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu">
     <meta property="og:type" content="website">
