oops, fixubuntu is still needed for 14.04

--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
   </head>
   <body>
     <div>
+      <div class="good-news">
+        <strong>Good news!</strong> In Ubuntu 14.10, your privacy won't get violated unless you opt-in to it. You'll still need to run this if you're using Ubuntu 12.10, 13.04, 13.10, or 14.04.
+      </div>
+
       <div class="header">
         <h1>fix ubuntu</h1>
-      </div>
-          
-      <div class="good-news">
-        <strong>Good news!</strong> In Ubuntu 14.04 LTS, your privacy doesn't get violated unless you opt-in to it.<br/>
-        You only need to run this if you're using Ubuntu 12.10, 13.04, or 13.10.
-      </div>
+      </div>          
 
       <div class="left">
 
