--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div>
       <div class="good-news">
-        <strong>Good news!</strong> In Ubuntu 14.10, your privacy won't get violated unless you opt-in to it. You'll still need to run this if you're using Ubuntu 12.10, 13.04, 13.10, or 14.04.
+        <strong>Good news!</strong> In Ubuntu 14.10, your privacy should not be violated unless you opt-in to it. You'll still need to run this if you're using Ubuntu 12.10, 13.04, 13.10, or 14.04.
       </div>
 
       <div class="header">
