--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <div>
-      <div class="good-news">
+      <!--<div class="good-news">
         <strong>Good news!</strong> In Ubuntu 14.10, your privacy should not be violated unless you opt-in to it. You'll still need to run this if you're using Ubuntu 12.10, 13.04, 13.10, or 14.04.
-      </div>
+      </div>-->
 
       <div class="header">
         <h1>fix ubuntu</h1>
@@ -45,13 +45,13 @@ CCUL="com.canonical.Unity.lenses"
 # Figure out the version of Ubuntu that you're running
 V=`/usr/bin/lsb_release -rs`
 # The privacy problems started with 12.10, so earlier versions should do nothing
-if awk "BEGIN {exit !($V &lt; 12.10 || $V &gt;= 14.10)}"; then
+if [[ $V -lt 12.10 || $V -ge 15.04 ]]; then
   echo "Good news! This version of Ubuntu is not known to invade your privacy."
 else
 
   # Check Canonical schema is present. Take first match, ignoring case.
   SCHEMA="`$GS list-schemas | grep -i $CCUL | head -1`"
-  if [ -z "$SCHEMA" ]
+  if [[ -z "$SCHEMA" ]]
     then
     printf "Error: could not find Canonical schema %s.\n" "$CCUL" 1&gt;&amp;2
     exit 1
