Base64 encode ubuntu.png.
Saves 1 HTTP request.

Add a class to `h1` while we are it.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fix Ubuntu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assets/css/pack.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu">
     <meta property="og:type" content="website">
@@ -25,7 +25,7 @@
       </div>-->
 
       <div class="header">
-        <h1>fix ubuntu</h1>
+        <h1 class="logo">fix ubuntu</h1>
       </div>
 
       <div class="left">
