Created new design, removed code in favor of instructions

--- a/index.html
+++ b/index.html
@@ -17,36 +17,38 @@
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
   </head>
   <body>
-    <!--<div class="good-news">
-      <strong>Good news!</strong> In Ubuntu 14.10, your privacy should not be violated unless you opt-in to it. You'll still need to run this if you're using Ubuntu 12.10, 13.04, 13.10, or 14.04.
-    </div>-->
-
     <div class="page-header">
       <h1 class="logo">fix ubuntu</h1>
+      <p class="intro">By default, Ubuntu sends some of your information to third parties without asking you to opt-in. Follow these simple steps to fix Ubuntu and restore your privacy.</p>
     </div>
 
     <div class="left">
 
-      <p class="text-center">
-        <strong>How to restore privacy:</strong> Copy and paste the following code into a terminal. Press enter, and type your password. Enjoy your privacy.
-      </p>
-      <pre><code class="cmd">wget -q -O - https://fixubuntu.com/fixubuntu.sh | bash</code></pre>
+      <p>Open <strong>System Settings</strong></p>
 
-      <h2>What does this do?</h2>
-      <pre><code>{{FIXUBUNTU_SCRIPT}}</code></pre>
+      <img src="/assets/img/step1.png" />
+
+      <p>Choose <strong>Security &amp; Privacy</strong></p>
+
+      <img src="/assets/img/step2.png" />
+
+      <p>In the <strong>Search</strong> tab, switch <strong>Include online search results</strong> to <strong>OFF</strong></p>
+
+      <img src="/assets/img/step3.png" />
+
+      <p>That's it! Now when you type search terms into Dash, they won't get sent to a variety of companies. While you're here, look through the rest of the Security &amp; Privacy settings to decide what you're comfortable with.</p>
 
     </div>
 
     <div class="right">
-      <h2>Why do we need this?</h2>
+      <h2>What's this about?</h2>
       <p>
         If you're an Ubuntu user and you're using the default settings, each time you start
         typing in Dash (to open an application or search for a file on your computer),
         your search terms get sent to a variety of third parties, some of which advertise to you.
       </p>
       <p>
-        Ubuntu should protect user privacy by default. Since it doesn't, you can use
-        the code to the left to disable the parts of Ubuntu which are invasive to your privacy.
+        Ubuntu should protect user privacy by default. Since it doesn't, you can follow these steps to disable the parts of Ubuntu which are invasive to your privacy.
       </p>
       <p class="small">
         Note: This privacy problem only affects Unity. If you use GNOME
@@ -105,6 +107,7 @@
       </ul>
 
     </div>
+    <div class="clear"></div>
 
     <footer class="footer small" role="contentinfo">
       <p>
