--- a/index.html
+++ b/index.html
@@ -24,19 +24,31 @@
 
     <div class="left">
 
-      <p>Open <strong>System Settings</strong></p>
+      <p>Open <strong>Ubuntu Software Center</strong></p>
 
       <img src="/assets/img/step1.png" />
 
-      <p>Choose <strong>Security &amp; Privacy</strong></p>
+      <p>Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
 
       <img src="/assets/img/step2.png" />
 
-      <p>In the <strong>Search</strong> tab, switch <strong>Include online search results</strong> to <strong>OFF</strong></p>
+      <p>Type your password to install</p>
 
       <img src="/assets/img/step3.png" />
 
-      <p>That's it! Now when you type search terms into Dash, they won't get sent to a variety of companies. While you're here, look through the rest of the Security &amp; Privacy settings to decide what you're comfortable with.</p>
+      <p>When installation is finished, open <strong>Unity Tweak Tool</strong></p>
+
+      <img src="/assets/img/step4.png" />
+
+      <p>Click <strong>Search</strong></p>
+
+      <img src="/assets/img/step5.png" />
+
+      <p>Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
+
+      <img src="/assets/img/step6.png" />
+
+      <p>That's it! Now when you type search terms into Dash, they won't get sent to Ubuntu or any third party companies.</p>
 
     </div>
 
