Added numbers to the steps

--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
   <body>
     <div class="page-header">
       <h1 class="logo">fix ubuntu</h1>
-      <p class="intro">By default, Ubuntu sends some of your information to third parties without asking you to opt-in. Follow these simple steps to fix Ubuntu and restore your privacy.</p>
+      <p class="intro">By default, Ubuntu sends some of your information to third parties without asking you to opt-in. Follow these 6 simple steps to fix Ubuntu and restore your privacy.</p>
     </div>
 
     <div class="left">
 
-      <p>Open <strong>Ubuntu Software Center</strong></p>
+      <p><big><strong>1.</strong></big> Open <strong>Ubuntu Software Center</strong></p>
 
       <img src="/assets/img/step1.png" />
 
-      <p>Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
+      <p><big><strong>2.</strong></big> Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
 
       <img src="/assets/img/step2.png" />
 
-      <p>Type your password to install</p>
+      <p><big><strong>3.</strong></big> Type your password to install</p>
 
       <img src="/assets/img/step3.png" />
 
-      <p>When installation is finished, open <strong>Unity Tweak Tool</strong></p>
+      <p><big><strong>4.</strong></big> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
 
       <img src="/assets/img/step4.png" />
 
-      <p>Click <strong>Search</strong></p>
+      <p><big><strong>5.</strong></big> Click <strong>Search</strong></p>
 
       <img src="/assets/img/step5.png" />
 
-      <p>Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
+      <p><big><strong>6.</strong></big> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
 
       <img src="/assets/img/step6.png" />
 
