--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
 
     <div class="left">
 
-      <p><big><strong>1.</strong></big> Open <strong>Ubuntu Software Center</strong></p>
+      <p><span>1.</span> Open <strong>Ubuntu Software Center</strong></p>
 
-      <img src="/assets/img/step1.png" />
+      <img src="/assets/img/step1.png" alt="step1" width="449" height="320">
 
-      <p><big><strong>2.</strong></big> Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
+      <p><span>2.</span> Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
 
-      <img src="/assets/img/step2.png" />
+      <img src="/assets/img/step2.png" alt="step1" width="1131" height="259">
 
-      <p><big><strong>3.</strong></big> Type your password to install</p>
+      <p><span>3.</span> Type your password to install</p>
 
-      <img src="/assets/img/step3.png" />
+      <img src="/assets/img/step3.png" alt="step1" width="641" height="233">
 
-      <p><big><strong>4.</strong></big> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
+      <p><span>4.</span> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
 
-      <img src="/assets/img/step4.png" />
+      <img src="/assets/img/step4.png" alt="step1" width="449" height="320">
 
-      <p><big><strong>5.</strong></big> Click <strong>Search</strong></p>
+      <p><span>5.</span> Click <strong>Search</strong></p>
 
-      <img src="/assets/img/step5.png" />
+      <img src="/assets/img/step5.png" alt="step1" width="747" height="238">
 
-      <p><big><strong>6.</strong></big> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
+      <p><span>6.</span> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
 
-      <img src="/assets/img/step6.png" />
+      <img src="/assets/img/step6.png" alt="step1" width="747" height="504">
 
       <p>That's it! Now when you type search terms into Dash, they won't get sent to Ubuntu or any third party companies.</p>
 
