Add layzr for lazy loading images.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,23 @@
 
       <p><span>3.</span> Type your password to install</p>
 
-      <img src="/assets/img/step3.png" alt="step1" width="641" height="233">
+      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step3.png" alt="Step 3" width="641" height="233">
+      <noscript><img src="/assets/img/step3.png" alt="Step 3" width="641" height="233"></noscript>
 
       <p><span>4.</span> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
 
-      <img src="/assets/img/step4.png" alt="step1" width="449" height="320">
+      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step4.png" alt="Step 4" width="449" height="320">
+      <noscript><img src="/assets/img/step4.png" alt="Step 4" width="449" height="320"></noscript>
 
       <p><span>5.</span> Click <strong>Search</strong></p>
 
-      <img src="/assets/img/step5.png" alt="step1" width="747" height="238">
+      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step5.png" alt="Step 5" width="747" height="238">
+      <noscript><img src="/assets/img/step5.png" alt="Step 5" width="747" height="238"></noscript>
 
       <p><span>6.</span> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
 
-      <img src="/assets/img/step6.png" alt="step1" width="747" height="504">
+      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step6.png" alt="Step 6" width="747" height="504">
+      <noscript><img src="/assets/img/step6.png" alt="Step 6" width="747" height="504"></noscript>
 
       <p>That's it! Now when you type search terms into Dash, they won't get sent to Ubuntu or any third party companies.</p>
 
@@ -132,5 +136,12 @@
         the public find this site and understand its message.
       </p>
     </footer>
+
+    <script src="/assets/js/pack.js"></script>
+    <script>
+      var layzr = new Layzr({
+        threshold: 50
+      });
+    </script>
   </body>
 </html>
