--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image:height" content="122">
     <meta property="og:url" content="https://fixubuntu.com">
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
+    <script src="/assets/js/pack.js"></script>
   </head>
   <body>
     <div class="page-header">
@@ -34,22 +35,22 @@
 
       <p><span>3.</span> Type your password to install</p>
 
-      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step3.png" alt="Step 3" width="641" height="233">
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step3.png" alt="Step 3" width="641" height="233" onload="lzld(this)">
       <noscript><img src="/assets/img/step3.png" alt="Step 3" width="641" height="233"></noscript>
 
       <p><span>4.</span> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
 
-      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step4.png" alt="Step 4" width="449" height="320">
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step4.png" alt="Step 4" width="449" height="320" onload="lzld(this)">
       <noscript><img src="/assets/img/step4.png" alt="Step 4" width="449" height="320"></noscript>
 
       <p><span>5.</span> Click <strong>Search</strong></p>
 
-      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step5.png" alt="Step 5" width="747" height="238">
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step5.png" alt="Step 5" width="747" height="238" onload="lzld(this)">
       <noscript><img src="/assets/img/step5.png" alt="Step 5" width="747" height="238"></noscript>
 
       <p><span>6.</span> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
 
-      <img src="/assets/img/blank.gif" data-layzr="/assets/img/step6.png" alt="Step 6" width="747" height="504">
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step6.png" alt="Step 6" width="747" height="504" onload="lzld(this)">
       <noscript><img src="/assets/img/step6.png" alt="Step 6" width="747" height="504"></noscript>
 
       <p>That's it! Now when you type search terms into Dash, they won't get sent to Ubuntu or any third party companies.</p>
@@ -137,11 +138,5 @@
       </p>
     </footer>
 
-    <script src="/assets/js/pack.js"></script>
-    <script>
-      var layzr = new Layzr({
-        threshold: 50
-      });
-    </script>
   </body>
 </html>
