Remove html width and height attributes for images, because after adding lazyloading there are huge vertical blocks of whitespace when js is disabled

--- a/index.html
+++ b/index.html
@@ -27,31 +27,31 @@
 
       <p><span>1.</span> Open <strong>Ubuntu Software Center</strong></p>
 
-      <img src="/assets/img/step1.png" alt="step1" width="449" height="320">
+      <img src="/assets/img/step1.png" alt="step1">
 
       <p><span>2.</span> Search for <strong>unity tweak tool</strong>, and click <strong>Install</strong></p>
 
-      <img src="/assets/img/step2.png" alt="step1" width="1131" height="259">
+      <img src="/assets/img/step2.png" alt="step1">
 
       <p><span>3.</span> Type your password to install</p>
 
-      <img src="/assets/img/blank.gif" data-src="/assets/img/step3.png" alt="Step 3" width="641" height="233" onload="lzld(this)">
-      <noscript><img src="/assets/img/step3.png" alt="Step 3" width="641" height="233"></noscript>
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step3.png" alt="Step 3" onload="lzld(this)">
+      <noscript><img src="/assets/img/step3.png" alt="Step 3"></noscript>
 
       <p><span>4.</span> When installation is finished, open <strong>Unity Tweak Tool</strong></p>
 
-      <img src="/assets/img/blank.gif" data-src="/assets/img/step4.png" alt="Step 4" width="449" height="320" onload="lzld(this)">
-      <noscript><img src="/assets/img/step4.png" alt="Step 4" width="449" height="320"></noscript>
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step4.png" alt="Step 4" onload="lzld(this)">
+      <noscript><img src="/assets/img/step4.png" alt="Step 4"></noscript>
 
       <p><span>5.</span> Click <strong>Search</strong></p>
 
-      <img src="/assets/img/blank.gif" data-src="/assets/img/step5.png" alt="Step 5" width="747" height="238" onload="lzld(this)">
-      <noscript><img src="/assets/img/step5.png" alt="Step 5" width="747" height="238"></noscript>
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step5.png" alt="Step 5" onload="lzld(this)">
+      <noscript><img src="/assets/img/step5.png" alt="Step 5"></noscript>
 
       <p><span>6.</span> Uncheck <strong>Search online sources</strong> and <strong>Show "More Suggestions"</strong></p>
 
-      <img src="/assets/img/blank.gif" data-src="/assets/img/step6.png" alt="Step 6" width="747" height="504" onload="lzld(this)">
-      <noscript><img src="/assets/img/step6.png" alt="Step 6" width="747" height="504"></noscript>
+      <img src="/assets/img/blank.gif" data-src="/assets/img/step6.png" alt="Step 6" onload="lzld(this)">
+      <noscript><img src="/assets/img/step6.png" alt="Step 6"></noscript>
 
       <p>That's it! Now when you type search terms into Dash, they won't get sent to Ubuntu or any third party companies.</p>
 
