A few open graph tweaks.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8">
     <title>Fix Ubuntu</title>
@@ -9,12 +9,17 @@
     <meta name="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
     <meta property="og:title" content="Fix Ubuntu">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://fixubuntu.com/assets/img/opg.png">
+    <meta property="og:image" content="http://fixubuntu.com/assets/img/opg.png">
+    <meta property="og:image:secure_url" content="https://fixubuntu.com/assets/img/opg.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="122">
     <meta property="og:url" content="https://fixubuntu.com">
     <meta property="og:description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
+    <meta itemprop="name" content="Fix Ubuntu">
+    <meta itemprop="description" content="If you're an Ubuntu user and you're using the default settings, each time you start typing in Dash (to open an application or search for a file on your computer), your search terms get sent to a variety of third parties, some of which advertise to you.">
+    <meta itemprop="image" content="http://fixubuntu.com/assets/img/opg.png">
+
     <script src="/assets/js/pack.js"></script>
   </head>
   <body>
